tests/baselines/reference/nodeModulesTripleSlashReferenceModeOverrideModeError(module=node16).errors.txt
/index.ts(1,23): error TS1453: `resolution-mode` should be either `require` or `import`.
/index.ts(2,1): error TS2304: Cannot find name 'foo'.


==== /index.ts (2 errors) ====
    /// <reference types="pkg" resolution-mode="esm"/>
                          ~~~
!!! error TS1453: `resolution-mode` should be either `require` or `import`.
    foo; // bad resolution mode, which resolves is arbitrary
    ~~~
!!! error TS2304: Cannot find name 'foo'.
    bar;
    export {};
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export {};
    declare global {
        var foo: number;
    }
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export {};
    declare global {
        var bar: number;
    }